bat.bool1.icyhot.IcyHot.scala.error
Erreur de compilation :
IcyHot:2: error: ';' expected but integer literal found.
  if (temp1*temp2)<0 {
                   ^